fixed bug with menu button on mobile view

--- a/theme/sass/_layout.scss
+++ b/theme/sass/_layout.scss
@@ -15,7 +15,11 @@ body {
 }
 
 .mdl-layout__drawer-button {
+  background: $color-primary;
+  border-radius: 50%;
+  margin: 1em;
   position: fixed;
+  z-index: 10;
 }
 
 .blog-avatar {
